# CMakeProject7

./: CMakeLists.txt  CMakeSettings.json  Jenkinsfile
CMakeProject7/: CMakeLists.txt  CMakeProject7.cpp  CMakeProject7.h
